<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="c347.rp.edu.sg.p10_knowyourfacts.Frag2">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thirteen_seconds" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slugs" />

    <Button
        android:id="@+id/btnChangeColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_color" />
</LinearLayout>
